# robot

./: .gitignore  PROGRESS.md  README.md  deploy.sh
.github/: copilot-instructions.md
docs/: openai-intelligence-architecture.md
docs/plans/: 001-oakd-camera-transition.md  002-robot-deployment-and-verification.md  003-stereo-vslam-launch-fix.md  004-usb3-lpm-fix-oakd-pro.md  005-explore-mode-fix.md  006-llm-autonomous-exploration.md  007-velocity-arbiter.md  008-stuck-robot-recovery.md
docs/research/: 001-camera-hardware-change-live-config.md  002-oakd-pro-usb3-connection.md  003-stereo-streams-vslam-enablement.md  004-orin-nano-super-usb3-cameras.md  005-usb3-documentation-update.md  006-explore-mode-not-navigating.md  007-llm-autonomous-exploration-decisions.md  008-control-loop-architecture-review.md
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/msg/: VelocityRequest.msg
rosmaster-a1-robot/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
rosmaster-a1-robot/.github/: copilot-instructions.md
rosmaster-a1-robot/config/: isaac_vslam_params.yaml  oakd_pro_camera.yaml  slam_toolbox_params.yaml  sllidar_c1.yaml
rosmaster-a1-robot/launch/: camera.launch.py  navigation.launch.py  robot_bringup.launch.py  slam.launch.py
rosmaster-a1-robot/maps/: .gitkeep
rosmaster-a1-robot/msg/: RobotStatus.msg
rosmaster-a1-robot/scripts/: 01_ssh_connect.sh  02_setup_depth_camera.sh  03_setup_voice_commands.sh  04_setup_navigation.sh  05_autonomous_driving.sh  06_setup_llm_brain.sh  07_setup_imu.sh  llm_robot_brain.py  nav2_params.yaml  rosmaster_control.sh  start_robot.sh  voice_mapper.py  yahboom_explorer.py
rosmaster-a1-robot/srv/: VoiceCommand.srv
rosmaster-a1-robot/test/: test_llm_brain.py  test_navigation.py  test_voice_mapper.py
scripts/: 01_ssh_connect.sh  02_setup_depth_camera.sh  03_setup_voice_commands.sh  04_setup_navigation.sh  05_autonomous_driving.sh  06_setup_llm_brain.sh  07_setup_imu.sh  deploy_interfaces.sh  exploration_memory.py  hp60c_lowres.launch.py  llm_navigator.py  llm_robot_brain.py  nav2_params.yaml  oakd_params.yaml  oakd_params_test.yaml  oakd_vslam.launch.py  robot-arbiter.service  robot-base.service  robot-camera.service  robot-lidar.service  robot-tf.service  robot-voice-mapper.service  robot-vslam.service  robot.target  ros2_env.sh  rosmaster_control.sh  run_arbiter.sh  run_base.sh  run_camera.sh  run_lidar.sh  run_tf.sh  run_voice_mapper.sh  run_vslam.sh  safety_executor.py  sensor_snapshot.py  start_cam_test.sh  start_robot.sh  start_vslam_test.sh  velocity_arbiter.py  voice_mapper.py  (+2 more)
