[metadata]
name = rosmaster-a1-robot
version = 0.1.0
description = A ROS2 Humble robotics project for the Yahboom ROSMASTER A1 robot with Jetson Orin Nano.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/rosmaster-a1-robot
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    std_msgs
    geometry_msgs
    nav2_msgs
    depthai-ros
    slam_toolbox
    isaac-ros-visual-slam

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    voice_mapper = scripts.voice_mapper:main
    yahboom_explorer = scripts.yahboom_explorer:main
    rosmaster_control = scripts.rosmaster_control:main
    start_robot = scripts.start_robot:main
    ssh_connect = scripts.01_ssh_connect:main
    setup_depth_camera = scripts.02_setup_depth_camera:main
    setup_voice_commands = scripts.03_setup_voice_commands:main
    setup_navigation = scripts.04_setup_navigation:main
    autonomous_driving = scripts.05_autonomous_driving:main
    setup_llm_brain = scripts.06_setup_llm_brain:main
    setup_imu = scripts.07_setup_imu:main

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
    mypy